CMBSandbox4/src/objects/HarvestTimeEntry__c.object
<CustomObject>
    <description>Time entries mirrored in Harvest using Harvest2Salesforce Connect.  For help or more information, visit http://www.akacrm.com/salesforce/harvest2salesforce.html.</description>
    <fields>
        <fullName>CMB_Client__c</fullName>
        <formula>IF(
 CONTAINS( HarvestProject__r.Name , &quot;PreSales&quot;),&quot;PreSales&quot;,
IF( 
OR( 
CONTAINS( HarvestProject__r.Account__r.Name , &quot;CloudMyBiz&quot;) , 
CONTAINS( HarvestProject__r.Account__r.Name , &quot;Fundingo&quot;) 
),

&quot;CMB&quot;, &quot;Client&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMB/Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMB_Hours__c</fullName>
        <formula>IF(  

OR( 
CONTAINS( HarvestProject__r.Account__r.Name , &quot;CloudMyBiz&quot;) , 
CONTAINS( HarvestProject__r.Account__r.Name , &quot;Fundingo&quot;) 
),
 Duration__c,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMB Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Account_ID__c</fullName>
        <formula>HarvestProject__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Cost_Roll_Up__c</fullName>
        <inlineHelpText>Contractor Cost (Roll Up) - This is copied from the contractor cost field</inlineHelpText>
        <label>Contractor Cost (Roll Up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Cost__c</fullName>
        <formula>Duration__c *   Contractor_Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Hour_Ratio__c</fullName>
        <formula>Developer_Company__r.Contractor_Hour_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Hour Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_Hourly_Rate__c</fullName>
        <inlineHelpText>This is the rate from the developers account record and it will be populated via a workflow.</inlineHelpText>
        <label>Contractor Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Rate__c</fullName>
        <formula>IF(Developer_Name__r.Hourly_Rate__c &gt;0, 
Developer_Name__r.Hourly_Rate__c, 
Developer_Company__r.Contractor_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field displaying the hourly rate from the Contractors Account page.</inlineHelpText>
        <label>Contractor Rate (From Acct)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Hrs__c</fullName>
        <label>Credit Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Copy__c</fullName>
        <formula>Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Copy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Logged__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Logged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Date of time entry if tracking time by duration vs. start and end time.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_in_of_Weeks__c</fullName>
        <formula>IF( 
  CEILING( (  Date__c  - DATE( YEAR( Date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date in # of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_this_Week__c</fullName>
        <formula>if(
AND(
 Date_in_of_Weeks__c =
IF( 
  CEILING( ( Today() - DATE( YEAR( Today() ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Today() - DATE( YEAR( Today() ), 1, 1) + 1) / 7)),

YEAR( Date__c )=
YEAR(Today())) ,
true ,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the date this week?</inlineHelpText>
        <label>Date this Week?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_to_Log__c</fullName>
        <formula>DATEVALUE(CreatedDate)- Date__c</formula>
        <inlineHelpText>Number of days to log the hours - Date minus Created Date</inlineHelpText>
        <label>Days to Log</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Account_ID__c</fullName>
        <formula>Developer_Company__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field will contain id of the Developer Company(Account).</description>
        <label>Developer Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Contact_ID__c</fullName>
        <formula>Developer_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field will contain id of the Developer(Contact).</description>
        <label>Developer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Difference_in_Hourly_Rate__c</fullName>
        <formula>Contractor_Hourly_Rate__c - Contractor_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Duration of time in decimal format.  Eg., 2.75 = 2 hours and 45 minutes.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <inlineHelpText>If time is tracked by start and end time vs. duration, this is the end time.</inlineHelpText>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>The field will contain the Reason why there is no value in the Developer Name or Developer Company Field.</description>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_to_Client__c</fullName>
        <formula>IF(  OR(
CONTAINS( HarvestProject__r.Account__r.Name, &quot;CloudMyBiz&quot;), 
CONTAINS( HarvestProject__r.Account__r.Name, &quot;Fundingo&quot;), 
CONTAINS(  HarvestProject__r.Name , &quot;PreSales&quot;),
Non_Billable_State_When_Logged__c =true

),null,
( Hours_For_Client__c  * 
IF(
NOT(ISBLANK(HarvestProject__r.ProjectHourlyRate__c )),
HarvestProject__r.ProjectHourlyRate__c ,
HarvestProject__r.Opportunity_Hourly_Rate__c)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generic_Hours__c</fullName>
        <formula>Duration__c -  Valid_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration minus Valid Hours</inlineHelpText>
        <label>Generic Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HarvestEntryId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is the unique ID of a time card in HarvestApp.</inlineHelpText>
        <label>Harvest Entry Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HarvestProject__c</fullName>
        <inlineHelpText>Project time is related to.</inlineHelpText>
        <label>HarvestProject</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>HarvestTimeCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours_For_Client__c</fullName>
        <formula>IF(
 CONTAINS( Task_Type__c , &quot;Non-Billable to Client&quot;),0,
IF(
 CONTAINS( Task_Type__c , &quot;Shared Client Call&quot;),0,
IF(
 CONTAINS(  HarvestProject__r.Account__r.Name , &quot;CloudMyBiz&quot;),null,

IF(ISBLANK(Developer_Company__r.Contractor_Hour_Ratio__c), (Duration__c + IF(Credit_Hrs__c &gt;0.01, - Credit_Hrs__c, 0)),


IF(Credit_Hrs__c&gt;0,
(Duration__c - Credit_Hrs__c),

(Duration__c * Developer_Company__r.Contractor_Hour_Ratio__c))))))</formula>
        <label>Hours for Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Today__c</fullName>
        <formula>IF(  DATEVALUE(CreatedDate)  = TODAY(), Duration__c,null)</formula>
        <inlineHelpText>IF( CreatedDate  = TODAY(), Duration__c,null)</inlineHelpText>
        <label>Hours Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>This field will copy from the Hours for Client. this will be done via workflow</description>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_To_Client_Date__c</fullName>
        <label>Invoice Sent To Client Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Sent to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced_Time_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoiced Time Entry</label>
        <referenceTo>HarvestTimeEntry__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this time card has been invoiced in Harvest</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced_by_CMB_Date__c</fullName>
        <label>Invoiced by CMB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced_by_CMB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced by CMB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <label>Jira Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://cloudmybiz.atlassian.net/browse/&apos;+ Jira_Key__c , &apos;Jira Key&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_issue__c</fullName>
        <label>Jira issue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Hours__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) &gt;= TODAY()-7, Duration__c,null)</formula>
        <inlineHelpText>IF( DATEVALUE(CreatedDate) &gt;= TODAY()-7, Duration__c,null)</inlineHelpText>
        <label>Last 7 Days Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget_Summary_Fields__c</fullName>
        <formula>&quot;MTD: &quot; +  TEXT(round(HarvestProject__r.Hours_This_Month__c,0)) + &quot;/&quot; +  TEXT(round(HarvestProject__r.Monthly_Hours_Budget__c,0) )+ &quot; (&quot; + TEXT( (ROUND(HarvestProject__r.Hours_this_Month_of_Budget__c,2)*100)) +&quot;%)&quot; +&quot; &quot;+ HarvestProject__r.Name</formula>
        <inlineHelpText>This shows a summary  of the info for the monthly budget alert emails</inlineHelpText>
        <label>Monthly Budget Summary Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Billable_State_When_Logged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will be updated with a WF rule when the Project record has &quot;Non Billable State = True&quot;</inlineHelpText>
        <label>Non Billable State When Logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Description of time / notes</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>HarvestProject__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P__c</fullName>
        <formula>IF(  OR( CONTAINS( HarvestProject__r.Account__r.Name, &quot;CloudMyBiz&quot;),CONTAINS( HarvestProject__r.Account__r.Name, &quot;Fundingo&quot;)), -(Duration__c *   Contractor_Rate__c ),


(Fee_to_Client__c  - Contractor_Cost__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parsing_1__c</fullName>
        <label>Parsing 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parsing_2__c</fullName>
        <formula>IF(CONTAINS(Parsing_1__c, &quot;Daily standup&quot;), &quot;Daily standup&quot;,
IF(CONTAINS(Parsing_1__c, &quot;Standup call with&quot;), &quot;Daily standup&quot;,


IF(CONTAINS(Parsing_1__c, &quot;Reviewing the development items&quot;), &quot;Reviewing the development items&quot;,
IF(CONTAINS(Parsing_1__c, &quot;Available for work&quot;), &quot;Available for work&quot;,
IF(CONTAINS(Parsing_1__c, &quot;Awaiting work&quot;), &quot;Available for work&quot;,

IF(CONTAINS(Parsing_1__c, &quot;Available but&quot;), &quot;Available for work&quot;,

IF(CONTAINS(Parsing_1__c, &quot;Discussion with PM&quot;), &quot;Discussion with PM&quot;,
IF(CONTAINS(Parsing_1__c, &quot;Discussion with Project Manager&quot;), &quot;Discussion with PM&quot;,
IF(CONTAINS(Parsing_1__c, &quot;Daily project status &quot;), &quot;Discussion with PM&quot;,



null)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parsing 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parsing_3__c</fullName>
        <formula>IF(
Parsing_2__c=&quot;Available for work&quot;,&quot;Available for work&quot;,
IF(ISBLank(Parsing_2__c),
&quot;Valid&quot;, &quot;Generic&quot; ))</formula>
        <label>Parsing 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <inlineHelpText>Name/Alias of person logging time.</inlineHelpText>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_first_3__c</fullName>
        <formula>LEFT(Person__c, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person first 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreSales_Hours__c</fullName>
        <formula>IF( CONTAINS(HarvestProject__r.Name, &quot;PreSales&quot;) ,  Duration__c ,null)</formula>
        <inlineHelpText>IF( CONTAINS(HarvestProject__r.Name, &quot;PreSales&quot;) ,  Duration__c ,null)</inlineHelpText>
        <label>PreSales Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_1_ID__c</fullName>
        <formula>HarvestProject__r.Project_1__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project(1) ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Summary_Field__c</fullName>
        <formula>&apos; Total Hours to Client: &apos;+
TEXT( HarvestProject__r.Total_Hours_to_Client__c ) +&apos;. Estimated Hours: &apos; +
TEXT(HarvestProject__r.Estimated_Hours__c) + &apos;. This Month: &apos; +  TEXT(HarvestProject__r.Hours_This_Month__c) + &apos;. UnInvoiced Hours: &apos; +  TEXT(HarvestProject__r.Uninvoiced_Time_by_CMB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Summary Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <inlineHelpText>If time is tracked by start and end time vs. duration, this is the start time.</inlineHelpText>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <formula>If(contains(Task_Type__c,&quot;-&quot;),
LEFT(Task_Type__c,
FIND(&quot;-&quot;, Task_Type__c)),LEFT(Task_Type__c,
FIND(&quot;–&quot;, Task_Type__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Group__c</fullName>
        <formula>IF(Contains(Task_Type__c,&quot;Onsite&quot;),&quot;Onsite Discovery&quot;,
IF(Contains(Task_Type__c,&quot;Project Plan and Solution Design&quot;),&quot;Requirements Analysis &amp; Solution Design&quot;,

IF(Contains(Task_Type__c,&quot;Requirements &amp; Documentation&quot;),&quot;Requirements Analysis &amp; Solution Design&quot;,

IF(Contains(Task_Type__c,&quot;Dev Meeting&quot;),&quot;Project Management&quot;,
IF(Contains(Task_Type__c,&quot;Client Training Call&quot;),&quot;Training&quot;,

IF(Contains(Task_Type__c,&quot;Client Working Session&quot;),&quot;Configurations &amp; Development&quot;,

CASE(Task_Code__c, 
&quot;Config -&quot;,&quot;Configurations &amp; Development&quot;,
&quot;Deploy. -&quot;,&quot;Configurations &amp; Development&quot;,
&quot;Design -&quot;,&quot;Requirements Analysis &amp; Solution Design&quot;,
&quot;Dev. –&quot;, &quot;Configurations &amp; Development&quot;,
&quot;Documentation –&quot;, &quot;Requirements Analysis &amp; Solution Design&quot;,
&quot;Meeting -&quot;,&quot;Requirements Analysis &amp; Solution Design&quot;,
&quot;Proj Mgmt -&quot;,&quot;Project Management&quot;, 
&quot;Proj. Mgmt -&quot;,&quot;Project Management&quot;, 
&quot;Req. Analysis –&quot;,&quot;Requirements Analysis &amp; Solution Design&quot;,
&quot;Testing –&quot;, &quot;Configurations &amp; Development&quot;,Task_Code__c)
))))))</formula>
        <label>Task Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <inlineHelpText>Type of time.  These values are maintained in Harvest and are one-way Harvest--&gt;SFDC.</inlineHelpText>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_Month__c</fullName>
        <formula>MONTH( Date__c) =  MONTH( today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Count1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Entry Count1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Entry_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Entry ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_in_of_Weeks__c</fullName>
        <formula>IF( 
  CEILING( ( Today() - DATE( YEAR( Today() ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Today() - DATE( YEAR( Today() ), 1, 1) + 1) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today in # of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_s_Hours__c</fullName>
        <formula>IF(Date__c = TODAY(), Duration__c,null)</formula>
        <inlineHelpText>This should display today&apos;s hours only. Mainly for reports</inlineHelpText>
        <label>Today&apos;s Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnInvoiced_Hours__c</fullName>
        <formula>IF( Invoice_Sent_to_Client__c = false,  Hours_For_Client__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will display the uninvoiced hours and will display blank if the hours have already been invoiced.</inlineHelpText>
        <label>UnInvoiced Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is to trigger the workflow rule that inputs the developer ration into client hours</inlineHelpText>
        <label>Update Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Hours__c</fullName>
        <formula>IF( Parsing_3__c = &quot;Valid&quot;,  Duration__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will have an IF Stmt to show only valid hours</inlineHelpText>
        <label>Valid Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2x_Days_Ago_Hours__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) = TODAY()-2, Duration__c,null)</formula>
        <inlineHelpText>IF( DATEVALUE(CreatedDate) = TODAY()-2, Duration__c,null)</inlineHelpText>
        <label>2x Days Ago Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_s_Hours__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) = TODAY()-1, Duration__c,null)</formula>
        <inlineHelpText>IF( DATEVALUE(CreatedDate) = TODAY()-1, Duration__c,null)</inlineHelpText>
        <label>Yesterday&apos;s Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCloudMyBizEmployee__c</fullName>
        <formula>IF(Developer_Name__r.Account.Parent.Name=&quot;CloudMyBiz&quot;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will show if the Developer is a CloudMyBiz employee, based on the Parent Account = CloudMyBiz</inlineHelpText>
        <label>isCMBEmployee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInternal_NonMCA__c</fullName>
        <formula>IF(
AND(
NOT(CONTAINS(HarvestProject__r.Name, &quot;MCA&quot; )),
 CONTAINS(HarvestProject__r.Account__r.Name , &quot;CloudMyBiz&quot;)
),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isInternal NonMCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTimeMoved__c</fullName>
        <formula>IF( Parsing_1__c =&quot;time moved&quot;,true,false)</formula>
        <inlineHelpText>This will show if the Notes section shows &quot;time moved&quot; - which means that the time has been moved in Harvest to another project.</inlineHelpText>
        <label>isTimeMoved</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Time_Entry_ID__c</columns>
        <columns>HarvestProject__c</columns>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Modified_Last_2_Days</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>Modified Last 2 Days</label>
    </listViews>
    <nameField>
        <displayFormat>T-{YYYY}-{MM}-{0}</displayFormat>
        <label>Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>